--- a/samples/steve-jobs/index.html
+++ b/samples/steve-jobs/index.html
@@ -287,6 +287,10 @@ yepnope({
 });
 
 </script>
+<div class="buttons">
+      <button class="trigger-push">Trigger Push Notification</button>
+</div>
+<script src="main.js"></script>
 
 </body>
 </html>
