--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -76,6 +76,6 @@ yepnope({
 <div class="buttons">
       <button class="trigger-push">Trigger Push Notification</button>
 </div>
-<script src="/main.js"></script>
+<script src="../main.js"></script>
 </body>
 </html>
