--- a/samples/steve-jobs/index.html
+++ b/samples/steve-jobs/index.html
@@ -290,7 +290,7 @@ yepnope({
 <div class="buttons">
       <button class="trigger-push">Trigger Push Notification</button>
 </div>
-<script src="main.js"></script>
+<script src="samples/main.js"></script>
 
 </body>
 </html>
