add chatjs on basic html

--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -77,5 +77,11 @@ yepnope({
       <button class="trigger-push">Trigger Push Notification</button>
 </div>
 <script src="samples/main.js"></script>
+<script src="lib/chat.js"></script>
+<script type="text/javascript">
+	$.chat({
+		
+	});
+</script>
 </body>
 </html>
