--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -77,6 +77,7 @@ yepnope({
 <div id="chat_div"></div>
 <div class="buttons">
   <button class="trigger-push">Trigger Push Notification</button>
+  <input type="button" id="lounch-chat-cmd" value=" Start Chat with me"/>
 </div>
 <script src="samples/main.js"></script>
 <script src="lib/chat.js"></script>
