--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -84,7 +84,7 @@ yepnope({
 <link type="text/css" href="lib/jquery.ui.chatbox.css" rel="stylesheet" />
 <script type="text/javascript">
 	$.chat({
-		registerNewRoom: doRegisterNewRoom;
+		registerNewRoom: doRegisterNewRoom,
 		getURL: '../service/messages',
 		postURL: '../service/messages',
 	});
