--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -106,7 +106,7 @@ yepnope({
 		return new Promise((resolve, reject) => {
 			event.preventDefault();
 			let username = event.data.name,
-			let msg = $.chat.getInputMessage();
+			let msg = Chat.getInputMessage();
 			let url = '/turnjs4/service/registernewroom';
 			$.post(url, {username: username, msg: msg}, function(code){
 				resolve(code);
