--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -76,7 +76,7 @@ yepnope({
 <div id="chat_div"></div>
 <div class="buttons">
   <button class="trigger-push">Trigger Push Notification</button>
-  <input type="button" id="lounch-chat-cmd" value=" Start Chat with me"/>
+  <!-- <input type="button" id="lounch-chat-cmd" value=" Start Chat with me"/> -->
 </div>
 <script src="samples/main.js"></script>
 <script src="lib/chat.js"></script>
@@ -94,6 +94,7 @@ yepnope({
 		return new Promise((resolve, reject) => {
 			let url = '/turnjs4/service/registernewroom';
 			$.post(url, {username: username}, function(code){
+				console.log(log);
 				resolve(code);
 			}).fail(function(error) { 
 				console.log(JSON.stringify(error));
