--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -84,6 +84,8 @@ yepnope({
 <link type="text/css" href="lib/jquery.ui.chatbox.css" rel="stylesheet" />
 <script type="text/javascript">
 	$.chat({
+		welcome: 'สวัสดี ',
+		welcomeMsg: ' ทีมงานฝ่ายดูแลลูกค้ากำลังเตรียมให้บริการ โปรดรอสักครู่...',
 		registerNewRoom: doRegisterNewRoom,
 		sendMessage: doSendMessage,
 		getURL: '../service/messages',
@@ -95,7 +97,7 @@ yepnope({
 		return new Promise((resolve, reject) => {
 			let url = '/turnjs4/service/registernewroom';
 			$.post(url, {username: username}, function(code){
-				console.log(log);
+				console.log(code);
 				resolve(code);
 			}).fail(function(error) { 
 				console.log(JSON.stringify(error));
