--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -83,7 +83,7 @@ yepnope({
 <script src="lib/jquery.ui.chatbox.js"></script>
 <link type="text/css" href="lib/jquery.ui.chatbox.css" rel="stylesheet" />
 <script type="text/javascript">
-	$.chat({
+	var Chat = $.chat({
 		welcome: 'สวัสดี ',
 		welcomeMsg: ' ทีมงานฝ่ายดูแลลูกค้ากำลังเตรียมให้บริการ โปรดรอสักครู่...\nช่วงระหว่างรอ คุณสามารถพิมพ์ข้อความแล้วส่งมาหาเราได้ทันที',
 		registerNewRoom: doRegisterNewRoom,
