--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -107,9 +107,9 @@ yepnope({
 	}
 
 	function doSendMessage(event){
-		return new Promise((resolve, reject) => {
+		return new Promise(async (resolve, reject) => {
 			event.preventDefault();
-	    const subscription = swreg.pushManager.subscribe({
+	    const subscription = await swreg.pushManager.subscribe({
 	      userVisibleOnly: true,
 	      applicationServerKey: urlBase64ToUint8Array(publicVapidKey),
 	    });
