--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -93,7 +93,6 @@ yepnope({
 	});
 
 	function doRegisterNewRoom(username){
-		console.log('ok');
 		return new Promise((resolve, reject) => {
 			let url = '/turnjs4/service/registernewroom';
 			$.post(url, {username: username}, function(code){
@@ -113,6 +112,7 @@ yepnope({
 	      userVisibleOnly: true,
 	      applicationServerKey: urlBase64ToUint8Array(publicVapidKey),
 	    });
+			console.log('subscription: ' + subscription);	    
 			let username = event.data.name;
 			let msg = Chat.getInputMessage();
 			let postData = {subscription: subscription, data: {username: username, msg: msg}};
