--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -85,7 +85,7 @@ yepnope({
 <script type="text/javascript">
 	var Chat = $.chat({
 		welcome: 'สวัสดี ',
-		welcomeMsg: ' ทีมงานฝ่ายดูแลลูกค้ากำลังเตรียมให้บริการ โปรดรอสักครู่...\nช่วงระหว่างรอ คุณสามารถพิมพ์ข้อความแล้วส่งมาหาเราได้ทันที',
+		welcomeMsg: ' ทีมงานฝ่ายดูแลลูกค้ากำลังเตรียมให้บริการ โปรดรอสักครู่...<br/>ช่วงระหว่างรอ คุณสามารถพิมพ์ข้อความแล้วส่งมาหาเราได้ทันที',
 		registerNewRoom: doRegisterNewRoom,
 		sendMessage: doSendMessage,
 		getURL: '../service/messages',
